--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<link rel="icon" type="image/png" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 		<link rel="stylesheet" href="style/fa/css/font-awesome.min.css">
+		<script type = 'text/javascript' src="vendor/lodash.min.js"></script>
 		<script type = 'text/javascript' src="vendor/hammer.min.js"></script>
 		<script type = 'text/javascript' src="vendor/jsonfn.min.js"></script>
 		<script type = 'text/javascript' src="vendor/keypress.min.js"></script>
