First iteration of deterministic algorithm

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		<script type = 'text/javascript' src='js_v8/update.js'></script>
 		<script type = 'text/javascript' src='js_v8/render.js'></script>
 		<script type = 'text/javascript' src="js_v8/input.js"></script>
+		<script type = 'text/javascript' src="js_v8/ia.js"></script>
 		<script type = 'text/javascript' src="js_v8/main.js"></script>
 		<script type = 'text/javascript' src="js_v8/initialization.js"></script>
 		<script type = 'text/javascript' charset = 'utf-8' src = 'cordova.js'></script>
